<?xml version="1.0"?>
<package format="2">
  <name>state_space_systems</name>
  <version>0.0.0</version>
  <description>The state_space_systems package</description>

  <maintainer email="manuel.beschi@itia.cnr.it">Manuel Beschi</maintainer>

  <license>BSD</license>

  <url type="website">http://XXXXXXXXXXXXXXXXXXXX/state_space_systems</url>

  <author email="manuel.beschi@itia.cnr.it">Manuel Beschi</author>
  <author email="stefano.ghidini@itia.cnr.it">Stefano Ghidini</author>
  <author email="enrico.villagrossi@itia.cnr.it">Enrico Villagrossi (former author)</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  
  <build_depend>eigen_matrix_utils</build_depend>
  <exec_depend>eigen_matrix_utils</exec_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
